unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/ucinn_ascendv2__Interim__c.object-meta.xml
<CustomObject>
    <description>The shell object used for Integration that stores the fields for constituents.</description>
    <label>Interim</label>
    <nameField>
        <label>Interim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>