unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Affiliation_1_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Affiliation_1_Contact_Role__c</fullName>
    <label>Affiliation 1 Constituent Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>