unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Affiliation_1_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Affiliation_1_Data_Source__c</fullName>
    <description>Name of interface or method from which affiliation data was gathered.</description>
    <label>Affiliation 1 Data Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>