unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__DMS_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__DMS_ID__c</fullName>
    <label>DMS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>