unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Input_Wealth_Rating__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Input_Wealth_Rating__c</fullName>
    <label>Input Wealth Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>