unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Is_Profile__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Profile</label>
    <type>Checkbox</type>
</CustomField>