unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/fields/ucinn_ascendv2__Wealth_Rating_Fx_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Wealth_Rating_Fx_Date__c</fullName>
    <label>Wealth Rating Fx Date</label>
    <type>Date</type>
</CustomField>