unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/recordTypes/Bio_Information.recordType-meta.xml
<RecordType>
    <fullName>Bio_Information</fullName>
    <active>true</active>
    <label>Bio Information</label>
</RecordType>