unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/recordTypes/Bio_Information_Self_Report.recordType-meta.xml
<RecordType>
    <fullName>Bio_Information_Self_Report</fullName>
    <active>true</active>
    <label>Bio Information Self Report</label>
</RecordType>