unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/recordTypes/Event.recordType-meta.xml
<RecordType>
    <fullName>Event</fullName>
    <active>true</active>
    <description>Interims originating from Events.</description>
    <label>Event</label>
</RecordType>