unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/recordTypes/Hiring_Manager_Request.recordType-meta.xml
<RecordType>
    <fullName>Hiring_Manager_Request</fullName>
    <active>true</active>
    <label>Hiring Manager Request</label>
</RecordType>