unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/recordTypes/Login_Request.recordType-meta.xml
<RecordType>
    <fullName>Login_Request</fullName>
    <active>true</active>
    <label>Login Request</label>
</RecordType>