unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/recordTypes/ucinn_ascendv2__Advantage_Interface.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Advantage_Interface</fullName>
    <active>true</active>
    <description>Interims originating from Athletics / Advantage CRM.</description>
    <label>Advantage Interface</label>
</RecordType>