unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/recordTypes/ucinn_ascendv2__Bank_Of_America_Interface.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Bank_Of_America_Interface</fullName>
    <active>true</active>
    <description>Interims originating from Bank of America.</description>
    <label>Bank Of America Interface</label>
</RecordType>