unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/recordTypes/ucinn_ascendv2__Hospital_Interface.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Hospital_Interface</fullName>
    <active>true</active>
    <description>Interims originating from the Hospital/Healthsci interface.</description>
    <label>Hospital Interface</label>
</RecordType>