unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/recordTypes/ucinn_ascendv2__Kindsight_Interface.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Kindsight_Interface</fullName>
    <active>true</active>
    <description>Interims originating from Kindsight.</description>
    <label>Kindsight Interface</label>
</RecordType>