unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/recordTypes/ucinn_ascendv2__Online_Donation_Interface.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Online_Donation_Interface</fullName>
    <active>true</active>
    <description>Interims originating from Online Donations.</description>
    <label>Online Donation Interface</label>
</RecordType>