unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/recordTypes/ucinn_ascendv2__Organization_Interface.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Organization_Interface</fullName>
    <active>true</active>
    <description>Record type for tracking Organization Interims.</description>
    <label>Organization Interface</label>
</RecordType>