unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/recordTypes/ucinn_ascendv2__Ruffalo_Cody_Interface.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Ruffalo_Cody_Interface</fullName>
    <active>true</active>
    <description>Interims originating from the Ruffalo Cody Interface.</description>
    <label>Ruffalo Cody Interface</label>
</RecordType>