unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/recordTypes/ucinn_ascendv2__School_Radio_Interface.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__School_Radio_Interface</fullName>
    <active>true</active>
    <description>Interims originating from the School Radio interface.</description>
    <label>School Radio Interface</label>
</RecordType>