unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/recordTypes/ucinn_ascendv2__SIS_Interface.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__SIS_Interface</fullName>
    <active>true</active>
    <description>Interims originating from the Student Information System interface.</description>
    <label>SIS Interface</label>
</RecordType>