unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/recordTypes/ucinn_ascendv2__Special_Request_Interface.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Special_Request_Interface</fullName>
    <active>true</active>
    <description>Interims originating from a Special Request Interface.</description>
    <label>Special Request Interface</label>
</RecordType>