unpackaged/main/default/objects/ucinn_ascendv2__Interim__c/recordTypes/ucinn_ascendv2__Workday_Interface.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Workday_Interface</fullName>
    <active>true</active>
    <description>Interims originating from the Workday Interface.</description>
    <label>Workday Interface</label>
</RecordType>